--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,1 +1,73 @@
-<p>navbar works!</p>
+
+
+<!-- Top Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-2">
+  <div class="container">
+    <!-- Logo -->
+    <a class="navbar-brand" href="#">
+      <img src="assets/images/logo.png" alt="Logo" height="40">
+    </a>
+
+    <!-- Weather and Social Media -->
+    <div class="d-flex align-items-center">
+      <!-- Weather Widget -->
+      <div class="me-3 d-flex align-items-center">
+        <i class="fas fa-cloud me-2"></i>
+        <span>19.07° ST 18.7°</span>
+      </div>
+
+      <!-- Social Media Icons -->
+      <div class="social-icons me-3">
+        <a href="#" class="me-2"><i class="fab fa-facebook"></i></a>
+        <a href="#" class="me-2"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="me-2"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="me-2"><i class="fab fa-youtube"></i></a>
+        <a href="#" class="me-2"><i class="fab fa-linkedin"></i></a>
+      </div>
+
+      <!-- User Button -->
+      <button class="btn btn-warning">USUARIOS</button>
+    </div>
+  </div>
+</nav>
+
+<!-- Main Navigation Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="mainNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">INICIO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">LA LEHMANN</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">NUESTRA GENTE</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">NEGOCIOS</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#"><i class="fas fa-cow"></i> Consignación de Hacienda</a>
+            <a class="dropdown-item" href="#"><i class="fas fa-drumstick-bite"></i> Nutrición Animal</a>
+            <a class="dropdown-item" href="#"><i class="fas fa-wheat"></i> Acopio de Granos</a>
+            <a class="dropdown-item" href="#"><i class="fas fa-seedling"></i> Agroinsumos</a>
+            <a class="dropdown-item" href="#"><i class="fas fa-leaf"></i> Semillero</a>
+            <a class="dropdown-item" href="#"><i class="fas fa-gas-pump"></i> Combustibles</a>
+            <a class="dropdown-item" href="#"><i class="fas fa-shield-alt"></i> Seguros</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">NOTICIAS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">CONTACTO</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
