--- a/src/app/features/components/home/home.component.html
+++ b/src/app/features/components/home/home.component.html
@@ -1,1 +1,17 @@
-<p>home works!</p>
+
+
+<div  style="height: 6vh; z-index: -1;"></div>
+
+<div class="container mt-4">
+    <!-- <div class="custom-bg-img">
+
+    </div> -->
+    <h2 class="fw-bold text-success">Quienes Somos?</h2>
+    <p class="text-justify">
+        La cooperativa, En la actualidad cuenta con una capacidad de acopio de 42.000 toneladas
+    y alquila al Ferrocarril Nuevo Central Argentino (NCA), un galpón con capacidad de 1500 toneladas,
+    que es el mismo que ocupó en los años '50.
+    </p>
+
+    <button type="button" (click)="scrollToTop()" class="custom-btn custom-btn-primary"  routerLinkActive="active" > Conocer más</button>
+</div>
