--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,1 +1,12 @@
-<p>card works!</p>
+
+
+<div class="container-fluid mx-auto position-relative video-div" style="z-index: -2;left: -13px;">
+    <video loop autoplay [muted]="1" playsinline class="video-bg">
+        <source src="assets/videos/admBoquet.mp4" type="video/mp4">
+    </video>
+</div>
+
+
+
+
+<div  style="height: 6vh; z-index: -1;"></div>
