--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,24 @@
 
 <app-navbar />
+<app-card />
 
-<router-outlet />
+<div class="main-layout">
+
+    <main class="content">
+        <app-home />
+        <app-news />
+        <router-outlet />
+    </main>
+
+<aside class="sidebar">        
+    <!-- bannerDerecho -->
+    <app-banner-right />
+</aside>
+
+
+</div>
+
+
+
+<app-footer />
+
