--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
 <div class="main-layout">
 
     <main class="content">
-        <app-home />
-        <app-news />
+        <!-- <app-home />
+        <app-news /> -->
         <router-outlet />
     </main>
 
